--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,12 @@
 {
-    "name": "lesha724/yii2-document-viewer",
+    "name": "mkp_/yii2-document-viewer",
     "description": "виджет для отображения online документов с помощью google viewer и microsoft document viewer",
     "type": "yii2-extension",
     "keywords": ["yii2","extension", "viewer", "viewerjs", "docs", "widget"],
     "license": "MIT",
     "authors": [
         {
-            "name": "lesha724",
-            "email": "neff.alexey@gmail.com"
+            "name": "mkp_"
         }
     ],
     "require": {
