--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "mkp_/yii2-document-viewer",
+    "name": "mazhurnyy/yii2-document-viewer",
     "description": "виджет для отображения online документов с помощью google viewer и microsoft document viewer",
     "type": "yii2-extension",
     "keywords": ["yii2","extension", "viewer", "viewerjs", "docs", "widget"],
     "license": "MIT",
     "authors": [
-        {
-            "name": "mkp_"
+       {
+            "name": "mkp"
         }
     ],
     "require": {
@@ -15,7 +15,7 @@
     },
     "autoload": {
         "psr-4": {
-            "lesha724\\documentviewer\\": ""
+            "mazhurnyy\\documentviewer\\": ""
         }
     }
 }
